<resources>
    <string name="app_name">Device Mananger</string>
    <string name="platform_icon">platform icon</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="info">Info</string>
    <string name="device_status">device status</string>
    <string name="search_filter">Search Filter</string>
    <string name="apply">apply</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="clear_all">clear all</string>

    <string name="status_register_device">Register device…</string>
    <string name="status_register_complete">Register device complete!</string>
    <string name="status_sync_database">Sync database…</string>
    <string name="status_sync_database_complete">Sync database complete!</string>
    <string name="loading">Loading…</string>

    <string name="platform">Platform</string>
    <string name="version">version</string>
    <string name="screen_resolution">Screen Resolution</string>
    <string name="screen_size">Screen Size</string>
    <string name="check_out">Check Out</string>
    <string name="confirm">Confirm</string>
    <string name="your_name">Your name…</string>
    <string name="check_in">Check In</string>
    <string name="request">request</string>`
    <string name="requested_by">Requested by %1$s</string>
    <string name="status">Status</string>
    <string name="borrowed_by">Borrowed by %1$s</string>
    <string name="checked_out_by">Checked out by %1$s</string>
    <string name="available">Available</string>
    <string name="dash">-</string>
    <string name="request_from">From: %1$s</string>
    <string name="device_request">Device request</string>
    <string name="year_class">Year Class</string>
    <string name="is_samsung">Is Samsung</string>
    <string name="no_more_requests">No more requests can be made at this time</string>
    <string name="enter_your_name">Enter your name…</string>
    <string name="release">RELEASE</string>
    <string name="cancel_allcaps">@android:string/cancel</string>
    <string name="this_device_cannot_be_registered">This device cannot be registered</string>
    <string name="register">register</string>
    <string name="other_devices">other devices</string>
    <string name="authentication">authentication…</string>
    <string name="not_authorized">Not authorized</string>
    <string name="sign_in">Sign In</string>
    <string name="not_authorised">You are not authorised</string>
    <string name="permission">PERMISSION</string>
</resources>
