<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="device"
            type="com.detroitlabs.devicemanager.db.Device" />

        <variable
            name="viewModel"
            type="com.detroitlabs.devicemanager.ui.HomeViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@color/bg_dark">

        <TextView
            android:id="@+id/text_not_registerable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_device_cannot_be_registered"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            tools:visibility="gone" />

        <RelativeLayout
            android:id="@+id/view_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/device_status"
                android:src="@drawable/ic_checkbox_blank_circle_grey600_24dp"
                android:tint="@color/green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/normal_padding"
                android:layout_marginStart="@dimen/normal_padding"
                android:layout_toEndOf="@id/icon"
                android:layout_toRightOf="@id/icon"
                android:text="@string/available"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:visibility="visible">

            <RelativeLayout
                android:id="@+id/view_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/icon1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/device_status"
                    android:background="@drawable/indicator_circle"
                    android:backgroundTint="@color/status_orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/fontsize_normal"
                    android:textColor="@color/bg_white"
                    android:layout_marginLeft="@dimen/normal_padding"
                    android:layout_toRightOf="@id/icon1"
                    android:text="@{@string/requested_by(device.requestedBy)}"
                    tools:text="Requested By Peike" />

                <Button
                    android:id="@+id/dismiss_button"
                    style="@style/brandedButtonLight"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height_short"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:onClick="@{() -> viewModel.dismissRequest()}"
                    tools:text="DISMISS" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/view_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/icon2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/device_status"
                    android:background="@drawable/indicator_circle"
                    android:backgroundTint="@color/status_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/fontsize_normal"
                    android:textColor="@color/bg_white"
                    android:layout_marginLeft="@dimen/normal_padding"
                    android:layout_toRightOf="@id/icon2"
                    android:text="@{@string/borrowed_by(device.checkedOutBy)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                    android:visibility="visible"
                    tools:text="Borrowed By Peike" />

                <Button
                    android:id="@+id/release_button"
                    style="@style/brandedButtonLight"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height_short"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:onClick="@{() -> viewModel.checkIn()}"
                    android:text="@string/release" />
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</layout>